// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Ratio Prop - ratio items: rectangle 1`] = `
<div class="e-bolt-ratio e-bolt-ratio--rectangle">
</div>
`;

exports[`Bolt Ratio Prop - ratio items: square 1`] = `
<div class="e-bolt-ratio e-bolt-ratio--square">
</div>
`;

exports[`Bolt Ratio Prop - ratio items: standard 1`] = `
<div class="e-bolt-ratio e-bolt-ratio--standard">
</div>
`;

exports[`Bolt Ratio default 1`] = `
<div class="e-bolt-ratio e-bolt-ratio--rectangle">
</div>
`;
